--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,12 @@ authors = ["duytue <tue@vietkite.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8.5"
+pytorch-lightning = "^1.5.10"
+numpy = "^1.22.3"
+python-box = "^5.4.1"
+opencv-python = "^4.5.5"
+pandas = "^1.4.1"
+torchvision = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
