--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ authors = ["duytue <tue@vietkite.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8.5"
+pandas = "^1.4.1"
+torch = "^1.11.0"
+opencv-python = "^4.5.5"
+scikit-learn = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
