--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ pandas = "^1.4.1"
 torch = "^1.11.0"
 opencv-python = "^4.5.5"
 scikit-learn = "^1.0.2"
+seaborn = "^0.11.2"
+wandb = "^0.12.11"
+tqdm = "^4.63.0"
+torchvision = "^0.12.0"
+tensorboard = "^2.8.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
