--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ wandb = "^0.12.11"
 tqdm = "^4.63.0"
 torchvision = "^0.12.0"
 tensorboard = "^2.8.0"
+imutils = "^0.5.4"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
