--- a/yolov5/.gitignore
+++ b/yolov5/.gitignore
@@ -1,3 +1,6 @@
+# Wandb
+wandb/
+
 # Repo-specific GitIgnore ----------------------------------------------------------------------------------------------
 *.jpg
 *.jpeg
