--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ authors = ["duytue <tue@vietkite.com>"]
 [tool.poetry.dependencies]
 python = "^3.8.5"
 pandas = "^1.4.1"
-torch = "^1.11.0"
+torch = "1.10.0"
 opencv-python = "^4.5.5"
 scikit-learn = "^1.0.2"
 seaborn = "^0.11.2"
 wandb = "^0.12.11"
 tqdm = "^4.63.0"
-torchvision = "^0.12.0"
+torchvision = "0.11.1"
 tensorboard = "^2.8.0"
 imutils = "^0.5.4"
 
