--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,15 @@ tqdm = "^4.63.0"
 torchvision = "0.11.1"
 tensorboard = "^2.8.0"
 imutils = "^0.5.4"
+loguru = "^0.6.0"
+thop = "^0.0.31"
+pycocotools = "^2.0.4"
+tabulate = "^0.8.9"
+lap = "^0.4.0"
+ninja = "^1.10.2"
+filterpy = "^1.4.5"
+Cython = "^0.29.28"
+cython-bbox = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
